Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -509,7 +509,7 @@ The effect of simulating an extended-pulse gene flow only results in a slight bi
 \subsection{Application to Neandertal Data}
 Our next aim is to apply our model on the case of Neandertal gene flow into Eurasians. We estimate the Neandertal admixture pulse from the 1000 genomes data \citep{the_1000_genomes_project_consortium_global_2015} and three high-coverage Neandertal genomes \citep{prufer_complete_2013, prufer_high-coverage_2017, mafessoni_high_coverage_2020} by fiting pulses with durations ranging from one generation up to 2,500 generations to the ALD decay curve (Figure \ref{fig:fig5}, Supplementary Table 3). Plotting these best-fit ALD curves shows the extremely slight difference predicted under these drastically different gene flow scenarios (Figure \ref{fig:fig5}A). The difference between scenarios becomes more apparent if we log-transform the y-axis (Figure \ref{fig:fig5}B), where we see that ongoing gene flow results in a heavier tail in the ALD distributions. However, these LD values are very close to zero, and are thus only very noisily estimated. 
 
-For short gene flows (less than 1,000 generations), our estimates for $t_m$ are very similar and identical to the simple pulse, at around 1,682 (1,526 -- 1,839 $C.I._{95\%}$) generations. Extremely high values of $t_d$ result in slightly higher values of $t_m$ with overlapping compatibility intervals; but all predict that Neandertals would have survived until ~30kya, for which the archaeological evidence is extremely sparse \citep{hublin_last_2017}.  From the residual sum-of-squares, the models perform equally well, with longer extended pulses of gene flow achieving marginally better fits (Supplementary Table \ref{tab:table_Supplements_Application_to_Neandertal_data_RSS}). Therefore, we find that all scenarios are compatible with the observed data, and that there is little power to differentiate these cases from genetics alone.  
+For short gene flows (less than 1,000 generations), our estimates for $t_m$ are very similar and identical to the simple pulse, at around 1,682 (1,526 -- 1,839 $C.I._{95\%}$) generations. Extremely high values of $t_d$ result in slightly higher values of $t_m$ with overlapping compatibility intervals; but all predict that Neandertals would have survived until ~30kya, for which the archaeological evidence is extremely sparse \citep{hublin_last_2017}.  From the residual sum-of-squares, the models perform equally well, with longer extended pulses of gene flow achieving marginally better fits (Supplementary Table 4). Therefore, we find that all scenarios are compatible with the observed data, and that there is little power to differentiate these cases from genetics alone.  
 
 
 \begin{figure}
@@ -936,8 +936,8 @@ For example, if we assume $N$, $A(t)$ and $\alpha$ are all constant,  and migrat
 \hypertarget{refs}{}
 
 %\bibliography{References/MyLibraryATE}
-%\bibliography{MyLibraryATE}
-\input{Limits_to_the_Nea_Hum_admixture_dating_revised.bbl}
+\bibliography{MyLibraryATE}
+%\input{Limits_to_the_Nea_Hum_admixture_dating_revised.bbl}
 
 %\pagebreak
 %\setcounter{figure}{0} %\renewcommand{\figurename}{Fig. S}
