Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -580,7 +580,7 @@ split time between modern humans and Neandertals is 10,000 generations
 and the split between Africans and non-Africans is 2,550
 generations. The migration rate from Neandertals into non-Africans
 was set to zero before the split from Africans, to ensure that there is no Neandertal
-ancestry in Africans.  For a more complex scenario of human population history, we followed the demographic model simulation setup of \cite{skov_detecting_2018}, but only simulated the Europeans. The split time of  non-Africans are kept the same as in the ALD simulations (2550 generations ago) (Supplementary Figure 1B). 
+ancestry in Africans.  For a more complex scenario of human population history, we followed \cite{skov_detecting_2018} and used a similar demographic model, but only simulated the Europeans.  We changed the $Ne$ for the ancestral humans, out-of-Africa bottleneck and ancestral Eurasians to 7,000, 250 and 5,000, respectively. The effective population sizes for Neandertals was set to 5,000 and the split time of non-Africans are kept the same as in the ALD simulations (2550 generations ago) (Supplementary Figure 1B). 
 
 For each individual we simulate 20
 chromosomes with a length of 150 Mb each. The mutation rates are set to
