--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -125,7 +125,7 @@
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/Simple_and_Skov.pdf}
-\caption{\label{fig:figS1} Demographic models of Neandertal introgression into non-Africans used for the simulations. A) Simple demographic model used for ALD simulations with constant population sizes. B) Complex demographic model with population size changes similar to  Skov et al. 2018.}
+\caption{\label{fig:figS1} Demographic models of Neandertal introgression into non-Africans used for the simulations. A) Simple demographic model used for ALD simulations with constant population sizes. B) Complex demographic model with population size changes and split times similar to  Skov et al. 2018.}
 \end{figure}
 
 
